--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -63,3 +63,6 @@ ja:
       unlock_instructions:
         subject: 'アカウントの凍結解除'
 #        subject: 'Unlock Instructions'
+    omniauth_callbacks:
+      user:
+        success: 'ログインしました'
